--- a/index.html
+++ b/index.html
@@ -2,28 +2,37 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8">
-  <title>Condividi la tua posizione</title>
+  <title>Posizione GPS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: sans-serif;
+      padding: 20px;
       text-align: center;
-      margin-top: 50px;
+      background-color: #f2f2f2;
+    }
+    h1 {
+      color: #333;
     }
     button {
-      padding: 10px 20px;
+      padding: 15px 25px;
       font-size: 18px;
+      background-color: #0084ff;
+      color: white;
+      border: none;
+      border-radius: 5px;
     }
     #output {
       margin-top: 20px;
       font-size: 16px;
-      color: #333;
+      color: #222;
     }
   </style>
 </head>
 <body>
-  <h1>Condividi la tua posizione GPS</h1>
-  <p>Clicca il bottone qui sotto per autorizzare l'accesso alla tua posizione:</p>
-  <button onclick="getLocation()">📍 Mostra la mia posizione</button>
+  <h1>Condividi la tua posizione</h1>
+  <p>Tocca il pulsante qui sotto per mostrare la tua posizione GPS.</p>
+  <button onclick="getLocation()">📍 Trova la mia posizione</button>
   <div id="output"></div>
 
   <script>
@@ -31,45 +40,35 @@
       if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(showPosition, showError);
       } else {
-        document.getElementById("output").innerHTML = "Il tuo browser non supporta la geolocalizzazione.";
+        document.getElementById("output").innerText = "Il tuo dispositivo non supporta la geolocalizzazione.";
       }
     }
 
     function showPosition(position) {
       const lat = position.coords.latitude;
       const lon = position.coords.longitude;
-
-      document.getElementById("output").innerHTML =
-        `<p>✅ Posizione rilevata!</p>
-         <p>🌍 Latitudine: <strong>${lat}</strong><br>🌍 Longitudine: <strong>${lon}</strong></p>`;
-
-      // Invia al tuo server (opzionale)
-      /*
-      fetch("https://TUO-SERVER.COM/salva-posizione", {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({ latitude: lat, longitude: lon })
-      });
-      */
+      document.getElementById("output").innerHTML = `
+        ✅ <strong>Posizione trovata!</strong><br><br>
+        🌍 Latitudine: <b>${lat}</b><br>
+        🌍 Longitudine: <b>${lon}</b>
+      `;
     }
 
     function showError(error) {
       switch(error.code) {
         case error.PERMISSION_DENIED:
-          document.getElementById("output").innerHTML = "❌ Permesso negato.";
+          msg = "Permesso negato. Non posso rilevare la posizione.";
           break;
         case error.POSITION_UNAVAILABLE:
-          document.getElementById("output").innerHTML = "❌ Posizione non disponibile.";
+          msg = "Posizione non disponibile.";
           break;
         case error.TIMEOUT:
-          document.getElementById("output").innerHTML = "❌ Timeout durante il rilevamento.";
+          msg = "Timeout. Riprovare.";
           break;
         default:
-          document.getElementById("output").innerHTML = "❌ Errore sconosciuto.";
-          break;
+          msg = "Errore sconosciuto.";
       }
+      document.getElementById("output").innerText = "❌ " + msg;
     }
   </script>
 </body>
